--- a/helm_charts/mdcore/templates/deployments-template.yml
+++ b/helm_charts/mdcore/templates/deployments-template.yml
@@ -116,6 +116,9 @@ spec:
       imagePullSecrets:
         {{- toYaml $.Values.imagePullSecrets | nindent 8 }}
       {{- end }}
+      {{- if $component.customPodDefinitions }}
+        {{- toYaml $component.customPodDefinitions | nindent 6 }}
+      {{- end }}
       {{- if (or $component.mountConfig $tls.enabled $component.persistentDir $component.extraVolumes )}}
       volumes:
         {{- if $component.mountConfig }}
