--- a/helm_charts/mdss/templates/deployments-template.yml
+++ b/helm_charts/mdss/templates/deployments-template.yml
@@ -88,9 +88,8 @@ spec:
       imagePullSecrets:
         {{- toYaml $.Values.imagePullSecrets | nindent 8 }}
       {{- end }}
-      {{- if $component.nodeSelector }}
-      nodeSelector:
-        {{- toYaml $component.nodeSelector | nindent 8 }}
+      {{- if $component.customPodDefinitions }}
+        {{- toYaml $component.customPodDefinitions | nindent 6 }}
       {{- end }}
       {{- if (or $component.mountConfig (and $component.persistentDir $.Values.persistance_enabled) $component.customVolumes)}}
       volumes:
