--- a/icap_ingress/ingress-controller-patch-image.yml
+++ b/icap_ingress/ingress-controller-patch-image.yml
@@ -4,4 +4,4 @@ spec:
     spec:
       containers:
         - name: <NGINX_CONTAINER_NAME>                                            # Container name within the Deployment/DaemonSet of the ingress controller
-          image: opswat/nginx-ingress:controller-1.5.1_ometascan-1.0.0_r1
+          image: opswat/nginx-ingress:controller-1.8.1_ometascan-1.1.0
