--- a/helm_charts/mdcore/values.yaml
+++ b/helm_charts/mdcore/values.yaml
@@ -146,7 +146,7 @@ core_components:
 
   md-core:
     name: md-core
-    image: opswat/metadefendercore-debian:latest         # Overrides the default docker image for the MD Core service, this value can be changed if you want to set a different version of MD Core
+    image: opswat/metadefendercore-debian:5.7.0         # Overrides the default docker image for the MD Core service, this value can be changed if you want to set a different version of MD Core
     replicas: 1                                         # Sets the number of replicas if you want to have multiple MD Core instances
     env:
       - name: MD_USER
@@ -238,7 +238,7 @@ core_components:
           defaultMode: 0777
     initContainers:
       - name: check-db-ready
-        image: opswat/metadefendercore-debian:latest
+        image: opswat/metadefendercore-debian:5.7.0
         imagePullPolicy: IfNotPresent
         envFrom:
           - configMapRef:
@@ -247,7 +247,7 @@ core_components:
           'until pg_isready -h $DB_HOST -p $DB_PORT; 
           do echo waiting for database; sleep 2; done;']
       - name: wait-for-hub-services
-        image: opswat/metadefendercore-debian:latest
+        image: opswat/metadefendercore-debian:5.7.0
         imagePullPolicy: IfNotPresent
         command: [ '/wait-for-hub-services.sh' ]
         volumeMounts:
