fix: Update PersistentVolume AccessMode to RWX to be consistent with PVC

--- a/helm_charts/mdss/templates/storage-template.yml
+++ b/helm_charts/mdss/templates/storage-template.yml
@@ -32,7 +32,7 @@ metadata:
   name: {{ printf "%s-%s-pv" .Release.Namespace .Values.storage_name }}
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   capacity:
     storage: 15Gi
   storageClassName: {{ printf "%s-%s" .Release.Namespace $.Values.storage_name }}
