--- a/helm_charts/icap/templates/storage-template.yml
+++ b/helm_charts/icap/templates/storage-template.yml
@@ -1,3 +1,4 @@
+---
 {{- if .Values.storage_configs.enabled }}
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -13,3 +14,14 @@ spec:
       storage: {{ .Values.storage_configs.resources.requests.storage }}
   storageClassName: {{ .Values.storage_configs.storageClassName }}
 {{ end }}
+
+{{ if $.Values.extra_storage_configs }}
+
+{{ range $storage_name, $storage_value := .Values.extra_storage_configs }}
+---
+{{- toYaml $storage_value }}
+
+{{ end }}
+
+{{ end }}
+
